<resources>
    <string name="app_name">Night Photo Exposure Finder</string>

    <string name="manufacturer">Manufacturer</string>
    <string name="sensorSize">Sensor Size (Crop Factor)</string>
    <string name="focalLength">Focal Length (in mm)</string>
    <string name="shutterSpeed">Shutter Speed (in seconds)</string>
    <string name="still">Still:</string>
    <string name="starTrail">Star Trail:</string>

    <string name="manufacturerDescription">Select your camera manufacturer from the drop down menu.
        Each manufacturer implements different type of sensors in the camera. Hence, selecting the
        right Manufacturer helps in deciding the sensor type. Steps to setup camera:\n1) Fix the
        camera on a sturdy tripod\n2) Focus the camera towards the subject. A combination of sky and land
        creates a good composition\n3) Set a wide aperture on the camera\n4) Set the shutter speed
        recommended by the app</string>

    <string name="sensorSizeDescription">DSLR Sensors are mainly of two types.
        Full Frame Sensors and Crop Frame Sensors. As the name suggests, the Full Frame Sensor
        utilizes the complete sensor to form the picture. These are normally implemented in
        higher-end cameras. They are more sensitive to light and provide better result for night
        photography. Crop Frame Sensor utilize a part of the sensor to form the picture. They are
        found in lower-end and cameras and are less sensitive to light. The crop ratio is usually
        specified in the camera manual or the camera website by the manufacturer. Select the right
        sensor type and the right crop ratio in the drop down menu.</string>

    <string name="focalLengthDescription">The Focal Length of the lens plays a major role in night photography.
        The field of view of the camera is decided by the camera focal length. A wide focal length
        allows the camera to see a lot more and the shutter speeds can go to a very high range. When
        the focal length is narrow, the field of view is small and the picture appears more
        zoomed-in. When shooting the stars, a wide focal length is recommended. The focal length set
        on the lens and the focal length as observed by the camera might change depending on the
        sensor type. As a end user, you do not have to worry about these changes. This app will help
        you to easily determine the shutter speed you need to set based on the focal length you have
        set on your lens. After selecting your focal length, focus the camera on the stars.</string>

    <string name="shutterSpeedDescription">The shutter speed of the camera finally decides the amount of time
        the sensor is exposed to the star light. For a specific focal length and sensor type, a
        threshold shutter speed is determined. If the shutter speed is greater than the threshold,
        star trails are obtained in the photo and if it is lower than the threshold, the star appear
        to be still. This threshold is calculated using few mathematical formulae. This app performs
        all the calculations and provides you with the appropriate shutter speed. Depending on the
        type of photography you are interested in, you can set the shutter speed as shown by the
        app.</string>

    <string name="sony">Sony</string>
    <string name="sigma">Sigma</string>
    <string name="samsung">Samsung</string>
    <string name="pentax">Pentax</string>
    <string name="nikon">Nikon</string>
    <string name="leica">Leica</string>
    <string name="minolta">Minolta</string>
    <string name="fujifilm">Fujifilm</string>
    <string name="canon">Canon</string>

    <string-array name="canonCrop">
        <item>1.0</item>
        <item>1.3</item>
        <item>1.6</item>
        <item>2.7</item>
        <item>4.8</item>
    </string-array>

    <string-array name="fujifilmCrop">
        <item>1.0</item>
        <item>1.5</item>
        <item>3.9</item>
    </string-array>

    <string-array name="minoltaCrop">
        <item>1.0</item>
        <item>1.5</item>
    </string-array>

    <string-array name="leicaCrop">
        <item>1.0</item>
        <item>1.3</item>
        <item>2.0</item>
    </string-array>

    <string-array name="nikonCrop">
        <item>1.0</item>
        <item>1.5</item>
        <item>2.7</item>
    </string-array>

    <string-array name="pentaxCrop">
        <item>0.8</item>
        <item>1.0</item>
        <item>1.5</item>
        <item>4.5</item>
        <item>5.6</item>
    </string-array>

    <string-array name="samsungCrop">
        <item>1.0</item>
        <item>1.5</item>
    </string-array>

    <string-array name="sigmaCrop">
        <item>1.0</item>
        <item>1.5</item>
        <item>1.7</item>
    </string-array>

    <string-array name="sonyCrop">
        <item>1.0</item>
        <item>1.5</item>
        <item>2.7</item>
        <item>3.9</item>
    </string-array>

</resources>
