<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout style="@style/DefaultLinearLayout">

        <android.support.v7.widget.CardView
            android:id="@+id/manufacturerCard"
            style="@style/CardTheme">

            <LinearLayout style="@style/DefaultLinearLayout">

                <TextView
                    style="@style/TitleTextView"
                    android:text="@string/manufacturer" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true"
                    android:padding="8dp">

                    <RadioGroup
                        android:id="@+id/manufacturerList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            style="@style/RadioButtonView"
                            android:text="@string/canon" />

                        <RadioButton
                            style="@style/RadioButtonView"
                            android:text="@string/fujifilm" />

                        <RadioButton
                            style="@style/RadioButtonView"
                            android:text="@string/minolta" />

                        <RadioButton
                            style="@style/RadioButtonView"
                            android:text="@string/leica" />

                        <RadioButton
                            style="@style/RadioButtonView"
                            android:text="@string/nikon" />

                        <RadioButton
                            style="@style/RadioButtonView"
                            android:text="@string/pentax" />

                        <RadioButton
                            style="@style/RadioButtonView"
                            android:text="@string/samsung" />

                        <RadioButton
                            style="@style/RadioButtonView"
                            android:text="@string/sigma" />

                        <RadioButton
                            style="@style/RadioButtonView"
                            android:text="@string/sony" />

                    </RadioGroup>

                </HorizontalScrollView>

                <View style="@style/DividerView" />

                <TextView
                    android:id="@+id/manufacturerHelp"
                    style="@style/HelpTextView" />

                <TextView
                    android:id="@+id/manufacturerDescription"
                    style="@style/DescriptionTextView"
                    android:text="@string/manufacturerDescription" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/sensorSizeCard"
            style="@style/CardTheme">

            <LinearLayout style="@style/DefaultLinearLayout">

                <TextView
                    style="@style/TitleTextView"
                    android:text="@string/sensorSize" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <RadioGroup
                        android:id="@+id/sensorSizeList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />

                </HorizontalScrollView>

                <View style="@style/DividerView" />

                <TextView
                    android:id="@+id/sensorSizeHelp"
                    style="@style/HelpTextView" />

                <TextView
                    android:id="@+id/sensorSizeDescription"
                    style="@style/DescriptionTextView"
                    android:text="@string/sensorSizeDescription" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/focalLengthCard"
            style="@style/CardTheme">

            <LinearLayout
                style="@style/DefaultLinearLayout"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <TextView
                    style="@style/TitleTextView"
                    android:text="@string/focalLength" />

                <NumberPicker
                    android:id="@+id/focalLengthPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <View style="@style/DividerView" />

                <TextView
                    android:id="@+id/focalLengthHelp"
                    style="@style/HelpTextView" />

                <TextView
                    android:id="@+id/focalLengthDescription"
                    style="@style/DescriptionTextView"
                    android:text="@string/focalLengthDescription" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/shutterSpeedCard"
            style="@style/CardTheme">

            <LinearLayout style="@style/DefaultLinearLayout">

                <TextView
                    style="@style/TitleTextView"
                    android:text="@string/shutterSpeed" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/stillShutterSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/still"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/startTrailShutterSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/starTrail"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                </android.support.design.widget.TextInputLayout>

                <View style="@style/DividerView" />

                <TextView
                    android:id="@+id/shutterSpeedHelp"
                    style="@style/HelpTextView" />

                <TextView
                    android:id="@+id/shutterSpeedDescription"
                    style="@style/DescriptionTextView"
                    android:text="@string/shutterSpeedDescription" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>